Update docs.go, swagger.json, swagger.yaml, and 14 more files
