# qualify-backend/internal/database/handlers/reviews.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"errors"
 	"fmt"
 	"main/pkg"
 	"net/http"
@@ -9,6 +10,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/jackc/pgx/v5"
+	"github.com/jackc/pgx/v5/pgconn"
 	"github.com/jackc/pgx/v5/pgxpool"
 )
 
@@ -237,6 +239,7 @@ func GetReview(conn *pgxpool.Pool) gin.HandlerFunc {
 // @Param review body pkg.Review true "Objeto avaliação"
 // @Success 201 {object} pkg.ReviewResponse
 // @Failure 400 {object} pkg.ErrorResponse
+// @Failure 409 {object} pkg.ErrorResponse
 // @Failure 500 {object} pkg.ErrorResponse
 // @Security     BearerAuth
 // @Router /reviews [post]
@@ -255,6 +258,25 @@ func CreateReview(conn *pgxpool.Pool) gin.HandlerFunc {
 		}
 
 		err := conn.QueryRow(c.Request.Context(),
+			`INSERT INTO review (analyst_id, client_id, service_id, rating, comment)
+			 VALUES ($1, $2, $3, $4, $5)
+			 RETURNING id, time_created`,
+			review.Analyst_id, review.Client_id, review.Service_id, review.Rating, review.Comment).
+			Scan(&review.Id, &review.Time_created)
+		if err != nil {
+			var pgErr *pgconn.PgError
+			if errors.As(err, &pgErr) {
+				switch pgErr.Code {
+				case "23505": // unique_violation
+					c.JSON(http.StatusConflict, pkg.Conflict(c.FullPath(), "Review already exists"))
+					return
+				}
+			}
+			c.JSON(http.StatusInternalServerError, pkg.Internal(c.FullPath(), err.Error()))
+			return
+		}
+
+		err = conn.QueryRow(c.Request.Context(),
 			`INSERT INTO review (analyst_id, client_id, service_id, rating, comment)
 			 VALUES ($1, $2, $3, $4, $5)
 			 RETURNING id, time_created`,
